--- a/NameDay/NameDay/View/SearchByNameView.xaml
+++ b/NameDay/NameDay/View/SearchByNameView.xaml
@@ -9,26 +9,27 @@
              BindingContext="{viewmodels2:SearchByNameViewModel}">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Name="MenuTND" Order="Primary"  Text="Todays Nameday" Priority="0" Command="{Binding todaysNameday}"/>
+        <ToolbarItem  Name="MenuTND" Order="Primary"  Text="Todays Nameday" Priority="0" Command="{Binding todaysNameday}"/>
         <ToolbarItem Name="MenuSBD" Order="Primary" Text="Search by Date" Priority="1" Command="{Binding onSearchByDate}"/>
         <ToolbarItem Name="DoSBN" Order="Secondary" Text="Reload Name" Command="{Binding SearchByName}"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout >
+          
             <StackLayout Orientation="Horizontal">
-                <Entry Text="{Binding Name, Mode=TwoWay}"/>
+                <Entry  Text="{Binding Name, Mode=TwoWay}"/>
                 
             </StackLayout>
             <StackLayout Orientation="Horizontal">
-                <Label Text="má svátek v "/>
+                <Label FontSize="Medium" Text="má svátek v "/>
                 <Label Text="{Binding Day}"/>
                 <Label Text="."/>
                 <Label Text="{Binding Month}"/>
             </StackLayout>
             <StackLayout Orientation="Horizontal">
-                <Label Text="Tento svátek je za:"/>
+                <Label FontSize="Medium" Text="Tento svátek je za:"/>
                 <Label Text="{Binding TheDaysBetween}"/>
-                <Label Text="Dní"/>
+                <Label FontSize="Small" Text="Dní"/>
             </StackLayout>
 
         </StackLayout>
